# script-llama-tui

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: event_message.rs  main.rs  tool_env.rs
src/chat/: im_channel.rs  mod.rs
src/component/: chat.rs  content.rs  mod.rs
src/debug_tool/: mod.rs
src/llm/: local_llm.rs  mod.rs
src/tool_env/: lua.rs  mod.rs  rhai.rs
static/: project.toml  prompt.lua.1.toml  prompt.lua.toml  prompt.rhai.toml
