[package]
name = "script-llama-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
env_logger = "0.11.3"
log = "0.4.22"
ratatui = { version = "0.27.0", features = ["crossterm"] }
tui-textarea = "0.4.0"
lua_llama = { path = "../lua_llama" }
crossbeam = "0.8.4"
anyhow = "1.0.86"
mlua = { version = "0.9.9", features = ["lua54", "vendored"] }

serde_json = "1.0.120"
clap = { version = "4.5.7", features = ["derive"] }
toml = "0.8.14"
